# OpenLightBit

./: README.md  botapi.py  botfunc.py  botmanager.py  cache_var.py  cloud.json  definer.py  depen.py  global.yaml  globalvars.py  langmanager.py  main.py  pyproject.toml
Audios/: README.md
docs/: .keep  lifetime.md  support.md
jsons/zh-hk/: rand_sents_hk.json
modules/: 114514.py  6.py  _c.py  _dianxiaoji.py  _eji.py  _openai.py  admin.py  blacklist.py  bot-version.py  botself.py  bread.py  c.py  cfstatus.py  dianxiaoji.py  echo.py  event.py  fish.py  globalvars.py  gotrend.py  gpt.py  hitokoto.py  image_review.py  manage.py  nima.py  openai.py  ping.py  prohibit_repeat.py  reset-openmariya-eng.py  rulai.py  saucenao.py  send.py  sensitive_words.py  status.py  ver.py
modules/NO_USE/: _6.py  __imgsafe.py  _top5_keyword.py  c.py
modules/currency/: _imgsafe.py  woodenfish.py
modules/zh-cn/: 6.py  bot-version.py  bread.py  caixuesheng-for-openmariya.py  eji.py  event.py  prohibit_repeat.py  ver-for-openmariya.py
modules/zh-hk/: caixuesheng-for-openmariya-hant.py  ver-for-openmariya-cht.py
modules/zh_cn/: 114514.py  6.py  blacklist.py  bot-version.py  botself.py  bread.py  c.py  echo.py  prohibit_repeat.py  reset-openmariya.py  sensitive_words.py  unixknowledge.py  ver-for-openmariya.py  woodenfish.py
modules/zh_hk/: 6_cht.py  blacklist_cht.py  bread_cht.py  fish_cht.py  prohibit_repeat_cht.py  sensitive_words_cht.py
yamls/: General.yaml  eji.yaml  khapi.yaml  linux_knowledge.yaml  rand_sentence.yaml
