[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[project]
name = "OpenLightBit"
version = "3.3.0"
description = "A QQ Bot"
authors = [
    { name = "HanTools233", email = "y066ydg5@duck.com" },
    { name = "HanTools233", email = "hantools@foxmail.com" },
]
dependencies = [
    "graia-ariadne[standard]<1.0.0,>=0.11.7",
    "pyyaml<7.0,>=6.0",
    "requests-cache<1.0.0,>=0.9.7",
    "redis<5.0.0,>=4.4.0",
    "pymysql<2.0.0,>=1.0.2",
    "aiohttp[speedups]<4.0.0,>=3.8.3",
    "aiomysql<1.0.0,>=0.1.1",
    "opencc-python-reimplemented<1.0.0,>=0.1.6",
    "jieba<1.0.0,>=0.42.1",
    "portalocker>=2.7.0",
    "uvicorn>=0.21.1",
    "fastapi>=0.95.1",
    "rich>=13.4.2",
    "tencentcloud-sdk-python-tms>=3.0.967",
    "tencentcloud-sdk-python-ims>=3.0.967",
    "paddlepaddle>=2.5.1",
    "paddlenlp>=2.6.0",
    "pypinyin>=0.49.0",
    "setuptools>=69.0.2",
    "pip>=23.3.1",
    "ntplib>=0.4.0",
    "numpy>=1.25.2",
    "requests>=2.31.0",
    "py-cpuinfo>=9.0.0",
    "psutil>=5.9.5",
    "owtime @ git+https://hub.yzuu.cf/the-other-world/owtime-py.git@5.2.2.3",
    "pytz>=2023.3.post1",
]
requires-python = ">=3.10,<3.14"
license = { text = "AGPL-3.0" }
readme = "README.md"
